# bugsplat-py

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/bugsplat/: __init__.py  bugsplat.py
tests/: attachment2.txt  helpers.py  test_bugsplat.py
