[metadata]
name = bugsplat-py-bugsplat
version = 1.0.2
author = @bobbyg603
author_email = support@bugsplat.com
description = A Python package for sending Unhandled Exceptions to BugSplat
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BugSplat-Git/bugsplat-py
project_urls =
    Bug Tracker = https://github.com/BugSplat-Git/bugsplat-py/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Environment :: Console
    Environment :: Web Environment
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    requests
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src